Added delivered baby advice for registration

--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
@@ -497,13 +497,24 @@
                       <td></td>
                       <td></td>
                     </tr>
+					  <tr>
+						  <td>Community Health Worker's Name &#160;&#160; </td>
+						  <td><obs conceptId="164141AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+						  <td></td>
+						  <td></td>
+						  <td></td>
+						  <td></td>
+					  </tr>
+					  <tr>
+						  <br/>
+					  </tr>
                     <tr>
-                      <td>Community Health Worker's Name </td>
-                      <td><obs conceptId="164141AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+                      <td>Alternative contact's name  </td><br />
+                      <td><obs conceptId="162729AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"/></td>
                       <td></td>
                       <td></td>
-                      <td></td>
-                      <td></td>
+                      <td>Contacts: </td>
+                      <td><obs conceptId="159635AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"/></td>
                     </tr>
                   </table></td>
 			  </tr>
@@ -634,8 +645,8 @@
 								  <tr>
 									<td>Type of ARV prophylaxis</td>
 									<td colspan="2"><obs conceptId="1282AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-														 answerConceptIds="80586AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1652AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1149AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									                     answerLabels="Sd NVP Only,sd NVP+AZT+3TC,NVP for 6 weeks(Mother on HAART),None,Other"
+														 answerConceptIds="80586AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1652AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162326AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160123AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,78643AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1652AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1149AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									                     answerLabels="Sd NVP Only,sd NVP+AZT+3TC,NVP for 6 weeks(Mother on HAART),AZT Liquid BD for 6 weeks,3TC Liquid BD,AZT/NVP,None,Other"
 														 style="dropdown"
 									                      id="child-prophylaxis"/>
 									</td>
@@ -667,10 +678,11 @@
 						<td>&#160;&#160;&#160;&#160;&#160;&#160;If yes, select regimen</td>
 						<td id="mother-on-art-at-enrollment">
 							<obs conceptId="1088AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-								 answerConceptIds="792AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160124AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160104AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1652AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161361AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,104565AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162201AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,817AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+								 answerConceptIds="164505AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,792AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160124AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160104AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1652AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161361AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,104565AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162201AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,817AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
 							                       162199AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162565AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1652AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162561AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,164511AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,164512AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162560AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
                                                      162563AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162562AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162559AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-								 answerLabels="D4T/3TC/NVP,
+								 answerLabels="TDF/3TC/EFV,
+								               D4T/3TC/NVP,
 											   AZT/3TC/EFV,
 											   D4T/3TC/EFV,
 											   3TC/NVP/AZT,
