--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDelivery.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDelivery.html
@@ -35,11 +35,32 @@
         var PATIENT_IS_ENROLLED_HIV = <lookup expression="kenyaemr.hasHivUniquePatientNumber()" />;
         var PATIENT_IS_REPORTED_HIV = "<lookup expression="fn.latestObs(159427).getValueCoded()"/>";
         //var HAART_START_DATE = "<lookup expression="fn.latestObs(163784).getValueDatetime()"/>";
+        var GREENCARD_VELOCITY = "<lookup expression="kenyaemr.GreenCardVelocityCalculation()" />";
+        var PATIENT_ON_ART = GREENCARD_VELOCITY.split(",")[3].split(":")[1];
 		//On ready start
         jq(document).ready(function () {
+            onEncounterDateChange();
             //On delivery outcome change
-            jq('#maternal-outcome select').change(onOutcomeChange);
+            jq('#maternal-outcome select').change(onMaternalOutcomeChange);
+            jq('#single').show();
+            jq('#twins').hide();
+            jq('#triplets').hide();
+            getField('delivery-outcome.value').prop("selectedIndex", 1);
+            jq('#delivery-outcome select').change(onDeliveryOutcomeChange);
             jq('#tr-maternal-death-audited').hide();
+            //On baby condition change
+            jq('#initiated-bf-single select').prop('disabled', true);
+            jq('#teo-birth-single select').prop('disabled', true);
+            jq('#apgar-score-single :input').prop('disabled', true);
+            jq('#initiated-bf-twins select').prop('disabled', true);
+            jq('#teo-birth-twins select').prop('disabled', true);
+            jq('#apgar-score-twins :input').prop('disabled', true);
+            jq('#initiated-bf-triplets select').prop('disabled', true);
+            jq('#teo-birth-triplets select').prop('disabled', true);
+            jq('#apgar-score-triplets :input').prop('disabled', true);
+			jq('#baby-condition-single select').change(onSingleBabyOutcomeChange);
+			jq('#baby-condition-twins select').change(onTwinsBabyOutcomeChange);
+			jq('#baby-condition-triplets select').change(onTripletsBabyOutcomeChange);
             //Delivery complications
             jq('#delivery-complications select').change(complicationsChange);
             var motherComplications = jq('#delivery-complications select').val();
@@ -68,6 +89,12 @@
                 jq('#art-and-prophylaxis').show();
                 jq('#who-staging').show();
                 jq('#vl-sample').show();
+                //Prepopulate if already on HAART
+                if(PATIENT_ON_ART =="true") {
+                    jq('#on-art:text').val('Yes');
+                }else {
+                    jq('#on-art:text').val('No');
+                }
             }else{
                 jq('#tbl-hiv-test').show();
                 jq('#art-and-prophylaxis').hide();
@@ -155,13 +182,66 @@
             }
         }
 
-        function onOutcomeChange() {
+        function onMaternalOutcomeChange() {
             if (getValue('maternal-outcome.value') == 134612) {
                 //TODO: Need to consider validation when mother dies at delivery
                 jq('#tr-maternal-death-audited').show();
             }else{     //Alive
                 jq('#tr-maternal-death-audited').hide();
                 getField('maternal-death-audited.value').val("");
+            }
+        }
+        function onDeliveryOutcomeChange() {
+            if (getValue('delivery-outcome.value') == 159913) {
+                jq('#single').show();
+                jq('#twins').hide();
+                jq('#triplets').hide();
+            }
+            if (getValue('delivery-outcome.value') == 159914) {
+                jq('#single').show();
+                jq('#twins').show();
+                jq('#triplets').hide();
+            }
+            if (getValue('delivery-outcome.value') == 159915) {
+                jq('#single').show();
+                jq('#twins').show();
+                jq('#triplets').show();
+            }
+        }
+        function onSingleBabyOutcomeChange() {
+            if (getValue('baby-condition-single.value') == 151849) {
+                jq('#initiated-bf-single select').prop('disabled', false);
+                jq('#teo-birth-single select').prop('disabled', false);
+                jq('#apgar-score-single :input').prop('disabled', false);
+            }
+           else{
+                jq('#initiated-bf-single select').prop('disabled', true);
+                jq('#teo-birth-single select').prop('disabled', true);
+                jq('#apgar-score-single :input').prop('disabled', true);
+			}
+        }
+        function onTwinsBabyOutcomeChange() {
+            if (getValue('baby-condition-twins.value') == 151849) {
+                jq('#initiated-bf-twins select').prop('disabled', false);
+                jq('#teo-birth-twins select').prop('disabled', false);
+                jq('#apgar-score-twins :input').prop('disabled', false);
+            }
+            else{
+                jq('#initiated-bf-twins select').prop('disabled', true);
+                jq('#teo-birth-twins select').prop('disabled', true);
+                jq('#apgar-score-twins :input').prop('disabled', true);
+            }
+        }
+        function onTripletsBabyOutcomeChange() {
+            if (getValue('baby-condition-triplets.value') == 151849) {
+                jq('#initiated-bf-triplets select').prop('disabled', false);
+                jq('#teo-birth-triplets select').prop('disabled', false);
+                jq('#apgar-score-triplets :input').prop('disabled', false);
+            }
+            else{
+                jq('#initiated-bf-triplets select').prop('disabled', true);
+                jq('#teo-birth-triplets select').prop('disabled', true);
+                jq('#apgar-score-triplets :input').prop('disabled', true);
             }
         }
         function onPartnerTestedChange() {
@@ -281,6 +361,23 @@
             }
             return false;
         });
+        function onEncounterDateChange() {
+            var patientId = <lookup expression="patient.patientId"/>;
+            var encDate = getValue('encounter-date.value');
+            if(encDate == null) {
+                encDate = new Date();
+            }
+            jq.getJSON('/' + OPENMRS_CONTEXT_PATH + '/kenyaemr/emrUtils/durationSinceStartArt.action', { patientId: patientId, now: encDate })
+                .done(function(data) {
+                    var msg = data.duration ? data.duration : 'Not started';
+                    jq('#calculated-duration-start-art').html(msg);
+                });
+            jq.getJSON('/' + OPENMRS_CONTEXT_PATH + '/kenyaemr/emrUtils/currentArvRegimen.action', { patientId: patientId, now: encDate })
+                .done(function(data) {
+                    var msg = data.duration ? (data.regimen ) : 'None';
+                    jq('#calculated-duration-current-regimen').html(msg);
+                });
+        }
         //Clear hidden sections
         clearHiddenSections = function(parentObj) {
             parentObj.find('input[type=radio]').each(function() {
@@ -399,7 +496,7 @@
 						<tr>
 							<td>Explain delivery complications </td>
 							<td>
-								<obs conceptId="162093AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="5" id="explain-complications"/>
+								<obs conceptId="162093AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="30" id="explain-complications"/>
 							</td>
 							<td>Place of Delivery:</td>
 							<td>
@@ -420,11 +517,106 @@
 									 answerConceptIds="1574AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1578AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1577AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1575AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 							</td>
 						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<legend>Baby(s)</legend>
+					<table align="center" width="100%" class="tb1" id="single">
+							<tr>
+								<td><strong>Delivery outcome : </strong></td>
+								<td>
+									<obs conceptId="159949AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  id="delivery-outcome"
+										 answerConceptIds="159913AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159914AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159915AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Single,Twins,Triplets"/>
+								</td>
+							</tr>
+						<obsgroup groupingConceptId="162588AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
 						<tr>
 							<td colspan="6">
-								<br/>
-								<strong>Baby</strong>
+								Baby 1:
 								<hr />
+							</td>
+						</tr>
+							<tr>
+								<td>
+									Baby's name:
+								</td>
+								<td>
+									<obs conceptId="1586AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+								</td>
+							</tr>
+						<tr>
+							<td>Sex :</td>
+							<td>
+								<obs conceptId="1587AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="1534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1535AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Male,Female"/>
+							</td>
+							<td>Birth weight (kg) :</td>
+							<td>
+								<obs conceptId="5916AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Condition of the baby: </td>
+							<td valign="top">
+								<obs conceptId="159917AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="baby-condition-single"
+									 answerConceptIds="151849AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159916AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,135436AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Live birth,Fresh still birth,Macerated still birth"
+									 style="dropdown"
+								/>
+							</td>
+							<td>Birth with deformity ?</td>
+							<td>
+								<obs
+										conceptId="164122AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										answerConceptIds="155871AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										answerLabels="Yes,No,N/A"
+										style="dropdown" />
+							</td>
+						</tr>
+						<tr>
+						<td>TEO given at birth ?</td>
+						<td>
+							<obs
+									conceptId="1282AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="teo-birth-single"
+									answerConceptIds="84893AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									answerLabels="Yes,No,N/A"
+									style="dropdown" />
+						</td>
+							<td>Initiated BF in less than 1 hour:</td>
+							<td><obs conceptId="161543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="initiated-bf-single"
+									 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
+						</tr>
+						<tr id="apgar-score-single">
+							<td>Apgar Score (1 min):&#160;&#160;&#160;&#160;&#160;
+								<obs conceptId="159603AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+							<td>Apgar Score (5 min):&#160;&#160;&#160;&#160;&#160;
+								<obs conceptId="159604AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+							<td>Apgar Score (10 min):&#160;&#160;&#160;&#160;&#160;
+								<obs conceptId="159605AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						</obsgroup>
+					</table>
+					<table align="center" width="100%" class="tb1" id="twins">
+					<obsgroup groupingConceptId="162588AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
+						<tr>
+							<td colspan="6">
+								Baby 2:
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								Baby's name:
+							</td>
+							<td>
+								<obs conceptId="1586AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 							</td>
 						</tr>
 						<tr>
@@ -442,22 +634,13 @@
 						<tr>
 							<td>Condition of the baby: </td>
 							<td valign="top">
-								<obs conceptId="159917AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+								<obs conceptId="159917AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="baby-condition-twins"
+									 answerConceptIds="151849AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159916AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,135436AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Live birth,Fresh still birth,Macerated still birth"
+									 style="dropdown"
+								/>
 							</td>
-							<td>Initiated BF in less than 1 hour:</td>
-							<td><obs conceptId="161543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
-						</tr>
-						<tr>
-						<td>TEO given at birth ?</td>
-						<td>
-							<obs
-									conceptId="1282AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									answerConceptIds="84893AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									answerLabels="Yes,No,N/A"
-									style="dropdown" />
-						</td>
-						<td>Birth with deformity ?</td>
+							<td>Birth with deformity ?</td>
 							<td>
 								<obs
 										conceptId="164122AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
@@ -467,6 +650,19 @@
 							</td>
 						</tr>
 						<tr>
+							<td>TEO given at birth ?</td>
+							<td>
+								<obs
+										conceptId="1282AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="teo-birth-twins"
+										answerConceptIds="84893AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										answerLabels="Yes,No,N/A"
+										style="dropdown" />
+							</td>
+							<td>Initiated BF in less than 1 hour:</td>
+							<td><obs conceptId="161543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="initiated-bf-twins"
+									 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
+						</tr>
+						<tr id="apgar-score-twins" >
 							<td>Apgar Score (1 min):&#160;&#160;&#160;&#160;&#160;
 								<obs conceptId="159603AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 							</td>
@@ -477,6 +673,79 @@
 								<obs conceptId="159605AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 							</td>
 						</tr>
+					</obsgroup>
+				</table>
+					<table align="center" width="100%" class="tb1" id="triplets">
+						<obsgroup groupingConceptId="162588AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
+							<tr>
+								<td colspan="6">
+									Baby 3:
+									<hr />
+								</td>
+							</tr>
+							<tr>
+								<td>
+									Baby's name:
+								</td>
+								<td>
+									<obs conceptId="1586AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+								</td>
+							</tr>
+							<tr>
+								<td>Sex :</td>
+								<td>
+									<obs conceptId="1587AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerConceptIds="1534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1535AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Male,Female"/>
+								</td>
+								<td>Birth weight (kg) :</td>
+								<td>
+									<obs conceptId="5916AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+								</td>
+							</tr>
+							<tr>
+								<td>Condition of the baby: </td>
+								<td valign="top">
+									<obs conceptId="159917AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="baby-condition-triplets"
+										 answerConceptIds="151849AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159916AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,135436AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Live birth,Fresh still birth,Macerated still birth"
+										 style="dropdown"
+									/>
+								</td>
+								<td>Birth with deformity ?</td>
+								<td>
+									<obs
+											conceptId="164122AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+											answerConceptIds="155871AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+											answerLabels="Yes,No,N/A"
+											style="dropdown" />
+								</td>
+							</tr>
+							<tr>
+								<td>TEO given at birth ?</td>
+								<td>
+									<obs
+											conceptId="1282AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="teo-birth-triplets"
+											answerConceptIds="84893AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+											answerLabels="Yes,No,N/A"
+											style="dropdown" />
+								</td>
+								<td>Initiated BF in less than 1 hour:</td>
+								<td><obs conceptId="161543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="initiated-bf-triplets"
+										 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
+							</tr>
+							<tr id="apgar-score-triplets">
+								<td>Apgar Score (1 min):&#160;&#160;&#160;&#160;&#160;
+									<obs conceptId="159603AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+								</td>
+								<td>Apgar Score (5 min):&#160;&#160;&#160;&#160;&#160;
+									<obs conceptId="159604AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+								</td>
+								<td>Apgar Score (10 min):&#160;&#160;&#160;&#160;&#160;
+									<obs conceptId="159605AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+								</td>
+							</tr>
+						</obsgroup>
 					</table>
 				</td>
 			</tr>
@@ -499,6 +768,12 @@
 												&#160;&#160;&#160;&#160;
 												Date:
 												<lookup expression="fn.latestObs(159427).getObsDatetime()"/>
+												<br/>
+												<br/>On HAART:
+												<input type="text" name="on-art" id="on-art" readonly="True" />
+												&#160;&#160;&#160;&#160;
+												Regimen:
+												<span id="calculated-duration-current-regimen" class="value"></span>
 												<br/>
 											</td>
 										</tr>
@@ -632,7 +907,7 @@
 						<legend>ART and Prophylaxis</legend>
 						<table align="center" width="100%" class="tb1">
 							<tr id="tr-prophylaxis-given">
-								<td>Prophylaxis given during this visit?</td>
+								<td>Mother's prophylaxis given during this visit?</td>
 								<td><obs
 										conceptId="1109AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 										answerConceptIds="105281AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,74250AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
