--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDischarge.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDischarge.html
@@ -109,6 +109,8 @@
                                 <td>Vitamin A for mother dispensed?</td>
                                 <td>
                                     <obs conceptId="161534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                         answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                         style="dropdown" answerLabels="Yes,No,N/A"
                                     />
                                 </td>
                             </tr>
