--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -725,7 +725,10 @@
 						<tr>
 							<td>Condition of Episiotomy:</td>
 							<td>
-								<obs conceptId="159840AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"></obs>
+								<obs conceptId="159840AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="159842AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159843AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159841AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,113919AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Repaired-episiotomy wound,Healed-episiotomy wound,Gap-episiotomy wound,Postoperative wound infection,Not Applicable"
+								/>
 							</td>
 							<td>Lochia:</td>
 							<td>
