Corrected erroneous aggregate ANC register values

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -1116,8 +1116,8 @@
 					<tr id="cacx-screening-method">
 						<td>CaCx screening method? <span style="color:red;">*</span></td>
 						<td><obs conceptId="163589AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-								 answerConceptIds="885AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162816AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-								 answerLabels="Pap Smear,VIA,Other"
+								 answerConceptIds="885AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162816AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,164977,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+								 answerLabels="Pap Smear,VIA,VILI,Other"
 								 style="radio"
 								 id="screening-cacx-method"
 						/>
