--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
@@ -333,6 +333,7 @@
 				<td width="250">ANC No:</td>
 				<td>
 					<obs conceptId="163530AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"/>
+					<i>(xxxx/yy)</i>
 				</td>
 				<td>Gestation in weeks:</td>
 				<td>
